refactor: qlty fixes

--- a/docs/pages/101-faq.md
+++ b/docs/pages/101-faq.md
@@ -6,7 +6,7 @@ permalink: /faq
 
 # FAQ / Troubleshooting
 
-Practical answers to common questions and failure modes when working with **mat\_views** (definitions → services → jobs → rake tasks), the **demo** app, and PostgreSQL materialized views.
+Practical answers to common questions and failure modes when working with **mat_views** (definitions → services → jobs → rake tasks), the **demo** app, and PostgreSQL materialized views.
 
 ---
 
@@ -59,16 +59,16 @@ ORDER BY d.name;
 
 ### “Nothing happens when I run a rake task”
 
-* Ensure **Rails environment** is loaded (`=> :environment` is present).
-* Tasks log via **`Rails.logger`** (not `puts`). In development:
+- Ensure **Rails environment** is loaded (`=> :environment` is present).
+- Tasks log via **`Rails.logger`** (not `puts`). In development:
+  - Ensure the logger outputs to STDOUT and the log level isn’t too high.
 
-  * Ensure the logger outputs to STDOUT and the log level isn’t too high.
-* If the task **enqueues jobs**, make sure your **queue backend is running** (or use `config.active_job.queue_adapter = :inline` for immediate execution in dev).
-* Add `--yes` or `YES=1` to bypass confirmation prompts.
+- If the task **enqueues jobs**, make sure your **queue backend is running** (or use `config.active_job.queue_adapter = :inline` for immediate execution in dev).
+- Add `--yes` or `YES=1` to bypass confirmation prompts.
 
 ### “Adapter guesses the wrong backend?”
 
-* It **does not guess.** The adapter calls the unified API:
+- It **does not guess.** The adapter calls the unified API:
   `MatViews::Jobs::Adapter.enqueue(job, queue:, args:)`
   It relies on your app’s configured backend (ActiveJob, Sidekiq, Resque). Configure your backend per your app’s needs.
 
@@ -78,13 +78,13 @@ ORDER BY d.name;
 
 ### “Invalid view name format”
 
-* Definitions must use **simple identifiers** (no dots): `mv_user_activity` ✅, `public.mv_user_activity` ❌
-* Schema is resolved via `search_path` and quoted safely by services.
+- Definitions must use **simple identifiers** (no dots): `mv_user_activity` ✅, `public.mv_user_activity` ❌
+- Schema is resolved via `search_path` and quoted safely by services.
 
 ### “View exists in DB but there’s no MatViewDefinition”
 
-* Tasks intentionally raise a **guardrail** error if you pass `public.my_mv` and there’s no matching `MatViewDefinition`.
-* Fix: create the definition record (preferred) or drop the orphan MV manually if it’s truly obsolete.
+- Tasks intentionally raise a **guardrail** error if you pass `public.my_mv` and there’s no matching `MatViewDefinition`.
+- Fix: create the definition record (preferred) or drop the orphan MV manually if it’s truly obsolete.
 
 ---
 
@@ -92,14 +92,14 @@ ORDER BY d.name;
 
 ### “Create failed with SQL error”
 
-* Check your definition’s `sql`. Run it as a plain `SELECT` first.
-* Verify permissions (e.g., on referenced tables).
-* For large outputs, consider `WITH NO DATA` → index → refresh (see Best Practices).
+- Check your definition’s `sql`. Run it as a plain `SELECT` first.
+- Verify permissions (e.g., on referenced tables).
+- For large outputs, consider `WITH NO DATA` → index → refresh (see Best Practices).
 
 ### “Create idempotently”
 
-* Use the job/task flow; pass `force` only when you want to rebuild.
-* Pattern: `CREATE ... WITH NO DATA`, then build **indexes concurrently**, then **refresh concurrently**.
+- Use the job/task flow; pass `force` only when you want to rebuild.
+- Pattern: `CREATE ... WITH NO DATA`, then build **indexes concurrently**, then **refresh concurrently**.
 
 ---
 
@@ -107,8 +107,8 @@ ORDER BY d.name;
 
 ### “`cannot refresh materialized view concurrently without a unique index`”
 
-* **Concurrent refresh requires a unique index that covers all rows** of the MV result.
-* Create it first (often on `id`/`user_id`):
+- **Concurrent refresh requires a unique index that covers all rows** of the MV result.
+- Create it first (often on `id`/`user_id`):
 
   ```sql
   CREATE UNIQUE INDEX CONCURRENTLY IF NOT EXISTS idx_mv_user_activity_user_id
@@ -117,17 +117,17 @@ ORDER BY d.name;
 
 ### “Concurrent refresh fails in a transaction”
 
-* `REFRESH MATERIALIZED VIEW CONCURRENTLY` **cannot run inside a transaction block**.
-* Ensure your orchestration does not wrap it with `BEGIN … COMMIT`.
+- `REFRESH MATERIALIZED VIEW CONCURRENTLY` **cannot run inside a transaction block**.
+- Ensure your orchestration does not wrap it with `BEGIN … COMMIT`.
 
 ### “Regular refresh locks readers”
 
-* That’s expected for **regular** refresh. Use **concurrent** (requires unique index) or the **swap** strategy to minimize read downtime.
+- That’s expected for **regular** refresh. Use **concurrent** (requires unique index) or the **swap** strategy to minimize read downtime.
 
 ### “Refresh fails due to locks”
 
-* Check `pg_stat_activity` to find long transactions or sessions referencing the MV.
-* Consider retry logic, stagger refresh schedules, or switch to **swap** if appropriate.
+- Check `pg_stat_activity` to find long transactions or sessions referencing the MV.
+- Consider retry logic, stagger refresh schedules, or switch to **swap** if appropriate.
 
 ---
 
@@ -135,8 +135,8 @@ ORDER BY d.name;
 
 ### “Indexes/privileges disappeared after swap”
 
-* The **new temp MV** must receive the **same indexes and grants** before you rename it into place.
-* Ensure your `SwapRefresh` implementation recreates **all** required indexes and permissions.
+- The **new temp MV** must receive the **same indexes and grants** before you rename it into place.
+- Ensure your `SwapRefresh` implementation recreates **all** required indexes and permissions.
 
 ---
 
@@ -144,12 +144,12 @@ ORDER BY d.name;
 
 ### “Dependencies exist. Use cascade: true”
 
-* Another object (e.g., a view) depends on the MV. Drop dependents first or pass `cascade: true`.
-* Rake task: `mat_views:delete_by_name[mv_name,true,--yes]`
+- Another object (e.g., a view) depends on the MV. Drop dependents first or pass `cascade: true`.
+- Rake task: `mat_views:delete_by_name[mv_name,true,--yes]`
 
 ### “Delete should be idempotent”
 
-* Use `if_exists: true` (default in the service). Result is `:skipped` when the MV isn’t present.
+- Use `if_exists: true` (default in the service). Result is `:skipped` when the MV isn’t present.
 
 ---
 
@@ -157,7 +157,7 @@ ORDER BY d.name;
 
 ### “How do I skip confirmation?”
 
-* Pass `--yes` as the last arg **or** set `YES=1`:
+- Pass `--yes` as the last arg **or** set `YES=1`:
 
   ```bash
   bin/rake 'mat_views:create_all[,--yes]'
@@ -166,14 +166,14 @@ ORDER BY d.name;
 
 ### “Which arguments do tasks accept?”
 
-* **Create**: `[view_name, force, --yes]` / `[definition_id, force, --yes]` / `[force, --yes]`
-* **Refresh**: `[view_name, row_count_strategy, --yes]` (estimated|exact|blank)
-* **Delete**: `[view_name, cascade, --yes]` (true|false)
+- **Create**: `[view_name, force, --yes]` / `[definition_id, force, --yes]` / `[force, --yes]`
+- **Refresh**: `[view_name, row_count_strategy, --yes]` (estimated|exact|blank)
+- **Delete**: `[view_name, cascade, --yes]` (true|false)
 
 ### “Name vs schema-qualified name?”
 
-* You may pass `public.mv_name`. If a physical MV exists but **no definition**, tasks **raise** to avoid acting on unknown objects.
-* Prefer passing **definition names** (simple identifier).
+- You may pass `public.mv_name`. If a physical MV exists but **no definition**, tasks **raise** to avoid acting on unknown objects.
+- Prefer passing **definition names** (simple identifier).
 
 ---
 
@@ -181,16 +181,16 @@ ORDER BY d.name;
 
 ### “Which queue do jobs use?”
 
-* `MatViews.configuration.job_queue` (default `:default`). Override in your initializer.
+- `MatViews.configuration.job_queue` (default `:default`). Override in your initializer.
 
 ### “Do jobs record results anywhere?”
 
-* Yes. Each job writes a run row:
+- Yes. Each job writes a run row:
+  - Create → `mat_view_create_runs`
+  - Refresh → `mat_view_refresh_runs`
+  - Delete → `mat_view_delete_runs`
 
-  * Create → `mat_view_create_runs`
-  * Refresh → `mat_view_refresh_runs`
-  * Delete → `mat_view_delete_runs`
-* They include `status`, `started_at`, `finished_at`, `duration_ms`, `error`, and `meta`.
+- They include `status`, `started_at`, `finished_at`, `duration_ms`, `error`, and `meta`.
 
 ### “How do I enqueue?”
 
@@ -202,7 +202,7 @@ MatViews::Jobs::Adapter.enqueue(
 )
 ```
 
-* The adapter **does not detect** your backend; it assumes it’s already configured (ActiveJob/Sidekiq/Resque).
+- The adapter **does not detect** your backend; it assumes it’s already configured (ActiveJob/Sidekiq/Resque).
 
 ---
 
@@ -210,7 +210,7 @@ MatViews::Jobs::Adapter.enqueue(
 
 ### “Validator says: no MVs found”
 
-* Create views first (bootstrap demo or your own definitions):
+- Create views first (bootstrap demo or your own definitions):
 
   ```bash
   bin/rake 'mat_views:bootstrap_demo[1,--yes]'
@@ -220,20 +220,20 @@ MatViews::Jobs::Adapter.enqueue(
 
 ### “Found MVs in DB but no definitions”
 
-* The validator needs **definitions** to get the **baseline SQL**.
-* Ensure `MatViews::MatViewDefinition` exists for each MV name.
+- The validator needs **definitions** to get the **baseline SQL**.
+- Ensure `MatViews::MatViewDefinition` exists for each MV name.
 
 ### “Row counts differ (baseline vs MV)”
 
-* Your MV definition may have drifted from the baseline SQL or missed filters/joins.
-* Recreate/swap the MV with the current definition.
-* For stricter checks, extend the validator to compare aggregates or sampled rows.
+- Your MV definition may have drifted from the baseline SQL or missed filters/joins.
+- Recreate/swap the MV with the current definition.
+- For stricter checks, extend the validator to compare aggregates or sampled rows.
 
 ### “Huge variance in timings”
 
-* Run more iterations (e.g., 100–300).
-* Ensure a quiet DB; watch `pg_stat_activity`.
-* Consider a warmup run if you want hot-cache numbers.
+- Run more iterations (e.g., 100–300).
+- Ensure a quiet DB; watch `pg_stat_activity`.
+- Consider a warmup run if you want hot-cache numbers.
 
 ---
 
@@ -241,12 +241,13 @@ MatViews::Jobs::Adapter.enqueue(
 
 ### “Permission denied on MV”
 
-* Grant read access explicitly:
+- Grant read access explicitly:
 
   ```sql
   GRANT SELECT ON "public"."mv_user_activity" TO app_user;
   ```
-* Also verify privileges on **underlying tables** if you run baseline SQL in validation.
+
+- Also verify privileges on **underlying tables** if you run baseline SQL in validation.
 
 ---
 
@@ -254,12 +255,12 @@ MatViews::Jobs::Adapter.enqueue(
 
 ### “My view is in a non-public schema”
 
-* The services resolve schema from `search_path`, including quoted tokens and `$user`. If the resolved schema doesn’t exist, they **fallback to `public`**.
-* For explicit control, keep `search_path` predictable per environment.
+- The services resolve schema from `search_path`, including quoted tokens and `$user`. If the resolved schema doesn’t exist, they **fallback to `public`**.
+- For explicit control, keep `search_path` predictable per environment.
 
 ### “Why do you quote identifiers?”
 
-* We quote `schema` and `relation` with `quote_table_name` / identifier rules to avoid conflicts with mixed case or reserved words.
+- We quote `schema` and `relation` with `quote_table_name` / identifier rules to avoid conflicts with mixed case or reserved words.
 
 ---
 
@@ -267,7 +268,7 @@ MatViews::Jobs::Adapter.enqueue(
 
 ### “How do I silence logs in specs?”
 
-* In RSpec, mock `Rails.logger` with a spy:
+- In RSpec, mock `Rails.logger` with a spy:
 
   ```ruby
   let(:fake_logger) { instance_spy(Logger, info: ->(*){}, warn: ->(*){}, error: ->(*){}, debug: ->(*){}) }
@@ -276,7 +277,7 @@ MatViews::Jobs::Adapter.enqueue(
 
 ### “How do I test enqueue calls?”
 
-* Set up a spy:
+- Set up a spy:
 
   ```ruby
   allow(MatViews::Jobs::Adapter).to receive(:enqueue)
@@ -304,8 +305,8 @@ MatViews::Jobs::Adapter.enqueue(
 
 ## Still stuck?
 
-* Inspect the **run rows** (create/refresh/delete) for error strings and timing.
-* Look at **`meta[:sql]`** in responses or logs for the exact SQL executed.
-* Enable more verbose **DB logs** (Postgres `log_statement`, `log_duration`) in a dev/staging environment.
-* Raise an issue on the project’s GitHub with details about your setup, Postgres version, and any relevant logs.
-* We offer Professional support for complex issues or custom integrations. Contact us at [sales@codevedas.com](mailto:sales@codevedas.com) for inquiries.
+- Inspect the **run rows** (create/refresh/delete) for error strings and timing.
+- Look at **`meta[:sql]`** in responses or logs for the exact SQL executed.
+- Enable more verbose **DB logs** (Postgres `log_statement`, `log_duration`) in a dev/staging environment.
+- Raise an issue on the project’s GitHub with details about your setup, Postgres version, and any relevant logs.
+- We offer Professional support for complex issues or custom integrations. Contact us at [sales@codevedas.com](mailto:sales@codevedas.com) for inquiries.
