--- a/docs/pages/5.1 definitions.md
+++ b/docs/pages/5.1 definitions.md
@@ -13,11 +13,11 @@ Materialized views are defined and managed through the `MatViews::MatViewDefinit
 
 A **definition** is a persistent record that tells the engine:
 
-* what to **name** the materialized view,
-* the **SQL** that produces its rows,
-* how it should be **refreshed** (strategy and options),
-* what **indexes** (especially unique) it expects,
-* optional **dependencies** metadata for your own tooling.
+- what to **name** the materialized view,
+- the **SQL** that produces its rows,
+- how it should be **refreshed** (strategy and options),
+- what **indexes** (especially unique) it expects,
+- optional **dependencies** metadata for your own tooling.
 
 Once a definition exists, you can create, refresh (regular/concurrent/swap), and delete the materialized view using services, jobs, or rake tasks.
 
@@ -29,9 +29,9 @@ Once a definition exists, you can create, refresh (regular/concurrent/swap), and
 
 | Column                 | Type     | Required | Description                                                                                                   |
 | ---------------------- | -------- | -------- | ------------------------------------------------------------------------------------------------------------- |
-| `name`                 | string   | ✅        | **Unqualified** relation name (e.g., `mv_user_activity`). Must be a simple SQL identifier (no dot).           |
-| `sql`                  | text     | ✅        | The **SELECT** statement used to build the view.                                                              |
-| `refresh_strategy`     | enum     | ✅        | One of `regular`, `concurrent`, `swap`. Dictates the service used by `RefreshViewJob`.                        |
+| `name`                 | string   | ✅       | **Unqualified** relation name (e.g., `mv_user_activity`). Must be a simple SQL identifier (no dot).           |
+| `sql`                  | text     | ✅       | The **SELECT** statement used to build the view.                                                              |
+| `refresh_strategy`     | enum     | ✅       | One of `regular`, `concurrent`, `swap`. Dictates the service used by `RefreshViewJob`.                        |
 | `schedule_cron`        | string   |          | Optional: for your scheduler to read (engine does not schedule itself).                                       |
 | `unique_index_columns` | jsonb\[] |          | Columns expected to be uniquely indexed on the MV (e.g., `["user_id"]`). Required for **concurrent** refresh. |
 | `dependencies`         | jsonb\[] |          | Free-form list (tables, views, other MVs) you consider inputs; purely informational.                          |
@@ -45,24 +45,22 @@ Once a definition exists, you can create, refresh (regular/concurrent/swap), and
 
 We always build a **qualified relation** like:
 
-```
+```bash
 "schema"."relname"
 ```
 
 Key points:
 
-* We determine the **schema** from the database session’s `search_path`.
+- We determine the **schema** from the database session’s `search_path`.
+  - Empty or invalid `search_path` → we fall back to `public`.
+  - `$user` tokens are supported; if the user schema doesn’t exist we fall back to `public`.
+  - Quoted tokens in `search_path` are handled.
 
-  * Empty or invalid `search_path` → we fall back to `public`.
-  * `$user` tokens are supported; if the user schema doesn’t exist we fall back to `public`.
-  * Quoted tokens in `search_path` are handled.
+- The definition’s `name` **must not** include a dot; it’s treated as a bare identifier and validated (`public.mv` would be rejected).
 
-* The definition’s `name` **must not** include a dot; it’s treated as a bare identifier and validated (`public.mv` would be rejected).
-
-* Quoting:
-
-  * Schema and relation parts are each **identifier-quoted** to avoid injection and case/keyword issues.
-  * Internally we centralize this in helpers that produce a `qualified_rel` string suitable for SQL like `CREATE MATERIALIZED VIEW`, `REFRESH MATERIALIZED VIEW`, and `DROP MATERIALIZED VIEW`.
+- Quoting:
+  - Schema and relation parts are each **identifier-quoted** to avoid injection and case/keyword issues.
+  - Internally we centralize this in helpers that produce a `qualified_rel` string suitable for SQL like `CREATE MATERIALIZED VIEW`, `REFRESH MATERIALIZED VIEW`, and `DROP MATERIALIZED VIEW`.
 
 > If you ever hand-roll SQL, **never** interpolate raw strings; always use the engine’s helpers (e.g., the service’s `qualified_rel`) or `ActiveRecord` quoting methods to build `"schema"."rel"` safely.
 
@@ -70,9 +68,9 @@ Key points:
 
 ## Refresh strategies (recap)
 
-* **regular** — `REFRESH MATERIALIZED VIEW` (locks reads during refresh).
-* **concurrent** — `REFRESH MATERIALIZED VIEW CONCURRENTLY` (keeps reads available) **requires a unique index covering all rows**.
-* **swap** — create a temp MV from the definition SQL, **atomically swap** names, recreate indexes/permissions; ideal for low downtime when concurrent is not feasible.
+- **regular** — `REFRESH MATERIALIZED VIEW` (locks reads during refresh).
+- **concurrent** — `REFRESH MATERIALIZED VIEW CONCURRENTLY` (keeps reads available) **requires a unique index covering all rows**.
+- **swap** — create a temp MV from the definition SQL, **atomically swap** names, recreate indexes/permissions; ideal for low downtime when concurrent is not feasible.
 
 Choose in the definition:
 
@@ -86,19 +84,20 @@ refresh_strategy: :regular   # or :concurrent, :swap
 
 ### General guidelines
 
-* **SELECT only**: Your `sql` should be a single SELECT (CTEs are fine).
-* **Deterministic output**: Prefer immutable/strict functions; avoid volatile functions (`random()`, `clock_timestamp()`) unless you truly need them.
-* **No `SELECT *`**: List columns explicitly. It stabilizes indexes, consumers, and future changes.
-* **Group/aggregate carefully**: Every non-aggregated column must be in `GROUP BY`. Keep it minimal to avoid accidental row duplication.
-* **Filter early**: Push filters into the base CTE/joins rather than on top of an already massive result.
-* **Use CTEs for clarity**: They help readability and make swap/concurrent troubleshooting easier.
-* **Indexes**: If you plan to refresh **concurrently**, design a **unique** key in the result set and index it after creation:
+- **SELECT only**: Your `sql` should be a single SELECT (CTEs are fine).
+- **Deterministic output**: Prefer immutable/strict functions; avoid volatile functions (`random()`, `clock_timestamp()`) unless you truly need them.
+- **No `SELECT *`**: List columns explicitly. It stabilizes indexes, consumers, and future changes.
+- **Group/aggregate carefully**: Every non-aggregated column must be in `GROUP BY`. Keep it minimal to avoid accidental row duplication.
+- **Filter early**: Push filters into the base CTE/joins rather than on top of an already massive result.
+- **Use CTEs for clarity**: They help readability and make swap/concurrent troubleshooting easier.
+- **Indexes**: If you plan to refresh **concurrently**, design a **unique** key in the result set and index it after creation:
 
   ```sql
   CREATE UNIQUE INDEX CONCURRENTLY idx_mv_user_activity_user_id
   ON "public"."mv_user_activity"(user_id);
   ```
-* **Permissions**: Grant read privileges to app roles as needed after creation.
+
+- **Permissions**: Grant read privileges to app roles as needed after creation.
 
 ### Example: simple one-table view
 
@@ -172,14 +171,15 @@ MatViews::MatViewDefinition.create!(
 
 For **concurrent** refresh to succeed, Postgres requires a unique index that uniquely identifies every row in the MV.
 
-* Pick a stable, deterministic key from your result set (e.g., `user_id`, or a composite).
-* Create the index **after** the MV is created and **before** you attempt a concurrent refresh:
+- Pick a stable, deterministic key from your result set (e.g., `user_id`, or a composite).
+- Create the index **after** the MV is created and **before** you attempt a concurrent refresh:
 
   ```sql
   CREATE UNIQUE INDEX CONCURRENTLY idx_mv_user_activity_user_id
   ON "public"."mv_user_activity"(user_id);
   ```
-* If you use the **swap** strategy, ensure the swap step **recreates indexes** on the new view before renaming or immediately after, per your service’s implementation.
+
+- If you use the **swap** strategy, ensure the swap step **recreates indexes** on the new view before renaming or immediately after, per your service’s implementation.
 
 ---
 
@@ -201,28 +201,28 @@ This has no functional effect in the engine today; it’s useful for your dashbo
 
 ## Validations & safety checks
 
-* **Name validation**: `name` must be a simple identifier (no schema). If you need a different schema, change the DB `search_path` (the engine resolves and validates it).
-* **Existence checks**: Services verify whether the MV exists when appropriate (e.g., creation vs refresh vs delete with `IF EXISTS`).
-* **Quoting**: All SQL issued by services uses **safe identifier quoting** for schema and relation separately.
-* **Row-count strategy** (refresh): `:estimated` (fast, via `reltuples`) or `:exact` (via `COUNT(*)`).
+- **Name validation**: `name` must be a simple identifier (no schema). If you need a different schema, change the DB `search_path` (the engine resolves and validates it).
+- **Existence checks**: Services verify whether the MV exists when appropriate (e.g., creation vs refresh vs delete with `IF EXISTS`).
+- **Quoting**: All SQL issued by services uses **safe identifier quoting** for schema and relation separately.
+- **Row-count strategy** (refresh): `:estimated` (fast, via `reltuples`) or `:exact` (via `COUNT(*)`).
 
 ---
 
 ## Common pitfalls & how to avoid them
 
-* **Using a dotted name in `definition.name`**
+- **Using a dotted name in `definition.name`**
   Don’t. The engine will reject `public.mv_name`. Use `mv_name`; schema is resolved from `search_path`.
 
-* **Concurrent refresh without unique index**
+- **Concurrent refresh without unique index**
   You’ll get `ERROR: cannot refresh materialized view concurrently without a unique index`. Design your result set to include a unique key, then index it.
 
-* **Volatile functions in SQL**
+- **Volatile functions in SQL**
   Avoid `random()`, `clock_timestamp()`, etc. They can cause non-repeatable results and surprise diffs.
 
-* **Relying on `ORDER BY` without `LIMIT`**
+- **Relying on `ORDER BY` without `LIMIT`**
   `ORDER BY` in a view is usually wasted work unless it’s part of a limited/top-N pattern. Sort at read time if needed.
 
-* **Forgetting permissions**
+- **Forgetting permissions**
   Grant `SELECT` to your app role after creation or swap:
 
   ```sql
@@ -254,10 +254,9 @@ MatViews::DeleteViewJob.perform_later(defn.id, cascade: false)
 
 ## See also
 
-* [Run Tracking (Create / Refresh / Delete)](./runs)
-* [Creation, Refresh & Delete Services](./services)
-* [Jobs & Adapter](./jobs-and-adapters)
-* [Rake Tasks](./rake-tasks)
-* [Validation & Benchmarks](/validation)
-* Project policies: [SECURITY](https://github.com/Code-Vedas/rails_materialized_views/blob/main/SECURITY.md) · [CONTRIBUTING](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CONTRIBUTING.md) · [CODE\_OF\_CONDUCT](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CODE_OF_CONDUCT.md)
-
+- [Run Tracking (Create / Refresh / Delete)](./runs)
+- [Creation, Refresh & Delete Services](./services)
+- [Jobs & Adapter](./jobs-and-adapters)
+- [Rake Tasks](./rake-tasks)
+- [Validation & Benchmarks](/validation)
+- Project policies: [SECURITY](https://github.com/Code-Vedas/rails_materialized_views/blob/main/SECURITY.md) · [CONTRIBUTING](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CONTRIBUTING.md) · [CODE_OF_CONDUCT](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CODE_OF_CONDUCT.md)
