--- a/docs/pages/5.2 runs.md
+++ b/docs/pages/5.2 runs.md
@@ -9,17 +9,18 @@ permalink: /engine/runs
 
 Every materialized-view operation is recorded in a dedicated table so you can **audit**, **debug**, and **measure** performance over time.
 
-* **Create runs:** `mat_view_create_runs` → `MatViews::MatViewCreateRun`
-* **Refresh runs:** `mat_view_refresh_runs` → `MatViews::MatViewRefreshRun`
-* **Delete runs:** `mat_view_delete_runs` → `MatViews::MatViewDeleteRun`
+- **Create runs:** `mat_view_create_runs` → `MatViews::MatViewCreateRun`
+- **Refresh runs:** `mat_view_refresh_runs` → `MatViews::MatViewRefreshRun`
+- **Delete runs:** `mat_view_delete_runs` → `MatViews::MatViewDeleteRun`
 
 These rows are created and finalized by the corresponding **ActiveJob** wrappers:
 
-* `MatViews::CreateViewJob`
-* `MatViews::RefreshViewJob`
-* `MatViews::DeleteViewJob`
+- `MatViews::CreateViewJob`
+- `MatViews::RefreshViewJob`
+- `MatViews::DeleteViewJob`
 
 {: .note}
+
 > Jobs enqueue via the adapter:
 > `MatViews::Jobs::Adapter.enqueue(job_class, queue: MatViews.configuration.job_queue, args: [...])`
 > The adapter uses your configured backend (ActiveJob / Sidekiq / Resque) and does **not** guess.
@@ -30,10 +31,10 @@ These rows are created and finalized by the corresponding **ActiveJob** wrappers
 
 All run models share the same `status` enum:
 
-* `pending` (0) — reserved; rarely used directly by jobs
-* `running` (1) — job started, clock started
-* `success` (2) — operation completed successfully
-* `failed`  (3) — operation failed; `error` contains details
+- `pending` (0) — reserved; rarely used directly by jobs
+- `running` (1) — job started, clock started
+- `success` (2) — operation completed successfully
+- `failed` (3) — operation failed; `error` contains details
 
 Jobs set `started_at` / `finished_at` and compute `duration_ms` using a monotonic clock.
 
@@ -151,11 +152,11 @@ Each job follows the same high-level flow:
 1. Insert a run row with `status: :running` and `started_at`.
 2. Call the appropriate **service** (`CreateView`, `Regular/Concurrent/SwapRefresh`, `DeleteView`).
 3. Finalize the run:
-
-   * on success: `status: :success`, set `finished_at`, `duration_ms`, `meta` from service response.
-   * on error: `status: :failed`, set `error`, `finished_at`, `duration_ms`, `meta` from response.
+   - on success: `status: :success`, set `finished_at`, `duration_ms`, `meta` from service response.
+   - on error: `status: :failed`, set `error`, `finished_at`, `duration_ms`, `meta` from response.
 
 {: .note}
+
 > Services return a uniform `MatViews::ServiceResponse` that includes `status`, `payload` (e.g., `view`), and `meta` (e.g., `sql`, strategies, options). Jobs persist the **payload/meta** into the run row’s `meta`.
 
 ---
@@ -218,7 +219,7 @@ MatViews::MatViewRefreshRun
   .count
 ```
 
-### Latest rows\_count (if tracked)
+### Latest rows_count (if tracked)
 
 ```ruby
 MatViews::MatViewRefreshRun
@@ -231,9 +232,9 @@ MatViews::MatViewRefreshRun
 
 ## Dashboards & alerts
 
-* **Dashboards:** chart `duration_ms` over time per view; show last status & rows\_count.
-* **SLOs:** alert on `failed` refreshes, or on unusually high `duration_ms` (e.g., 2× moving average).
-* **Freshness:** display `last_refreshed_at` (if you maintain it on the definition) or derive it from the latest successful refresh run’s `finished_at`.
+- **Dashboards:** chart `duration_ms` over time per view; show last status & rows_count.
+- **SLOs:** alert on `failed` refreshes, or on unusually high `duration_ms` (e.g., 2× moving average).
+- **Freshness:** display `last_refreshed_at` (if you maintain it on the definition) or derive it from the latest successful refresh run’s `finished_at`.
 
 ---
 
@@ -241,8 +242,8 @@ MatViews::MatViewRefreshRun
 
 Run tables can grow quickly. Consider a periodic cleanup:
 
-* Keep last **N** runs per view (e.g., 500)
-* Or keep last **X days** of history (e.g., 90d)
+- Keep last **N** runs per view (e.g., 500)
+- Or keep last **X days** of history (e.g., 90d)
 
 Example (Postgres SQL):
 
@@ -261,29 +262,29 @@ WHERE mat_view_refresh_runs.id = ranked.id
 ```
 
 {: .note}
+
 > Tune by environment (prod vs. staging) and your storage/observability needs.
 
 ---
 
 ## Troubleshooting
 
-* **Run shows `success` but MV seems unchanged**
+- **Run shows `success` but MV seems unchanged**
   Confirm which **refresh strategy** ran (see `defn.refresh_strategy` and the run’s `meta`). For `:estimated` counts, remember `reltuples` is approximate; use `:exact` to verify.
 
-* **No runs recorded**
+- **No runs recorded**
   Ensure you’re enqueuing the **job** (not just calling services directly) if you want persistence. Services themselves don’t write run rows.
 
-* **Long durations out of nowhere**
+- **Long durations out of nowhere**
   Check for locks/long transactions, autovacuum interference, or compute spikes. Correlate `duration_ms` with DB logs and `pg_stat_activity`.
 
 ---
 
 ## See also
 
-* [Definitions)](./definitions)
-* [Creation, Refresh & Delete Services](./services)
-* [Jobs & Adapter](./jobs-and-adapters)
-* [Rake Tasks](./rake-tasks)
-* [Validation & Benchmarks](/validation)
-* Project policies: [SECURITY](https://github.com/Code-Vedas/rails_materialized_views/blob/main/SECURITY.md) · [CONTRIBUTING](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CONTRIBUTING.md) · [CODE\_OF\_CONDUCT](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CODE_OF_CONDUCT.md)
-
+- [Definitions)](./definitions)
+- [Creation, Refresh & Delete Services](./services)
+- [Jobs & Adapter](./jobs-and-adapters)
+- [Rake Tasks](./rake-tasks)
+- [Validation & Benchmarks](/validation)
+- Project policies: [SECURITY](https://github.com/Code-Vedas/rails_materialized_views/blob/main/SECURITY.md) · [CONTRIBUTING](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CONTRIBUTING.md) · [CODE_OF_CONDUCT](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CODE_OF_CONDUCT.md)
