--- a/docs/pages/5.3 services.md
+++ b/docs/pages/5.3 services.md
@@ -9,12 +9,13 @@ permalink: /engine/services
 
 Services are the **synchronous** building blocks behind all rake tasks and jobs. Each service:
 
-* validates the definition (`name`, existence, etc.),
-* builds safe SQL (properly quoted, schema-qualified),
-* executes the operation,
-* and returns a **uniform response** object your app (or job) can inspect.
+- validates the definition (`name`, existence, etc.),
+- builds safe SQL (properly quoted, schema-qualified),
+- executes the operation,
+- and returns a **uniform response** object your app (or job) can inspect.
 
 {: .note}
+
 > For background execution with timing/recording, use the corresponding **ActiveJob wrappers** (below) and enqueue them via `MatViews::Jobs::Adapter.enqueue`.
 
 ---
@@ -25,10 +26,10 @@ Services are the **synchronous** building blocks behind all rake tasks and jobs.
 
 A definition provides:
 
-* `name` — **unqualified** identifier (no dots). Example: `mv_user_activity`
-* `sql` — a **SELECT** statement (CTEs allowed)
-* `refresh_strategy` — `regular | concurrent | swap` (used by `RefreshViewJob`)
-* optional metadata (`unique_index_columns`, `dependencies`, etc.)
+- `name` — **unqualified** identifier (no dots). Example: `mv_user_activity`
+- `sql` — a **SELECT** statement (CTEs allowed)
+- `refresh_strategy` — `regular | concurrent | swap` (used by `RefreshViewJob`)
+- optional metadata (`unique_index_columns`, `dependencies`, etc.)
 
 **Name validation:** services reject dotted names (`public.mv_users`). Schema is resolved from the DB `search_path` and quoted separately.
 
@@ -36,12 +37,12 @@ A definition provides:
 
 All services generate a safe, schema-qualified relation:
 
-```
+```bash
 "schema"."rel"
 ```
 
-* Schema is resolved from `search_path` (supports quoted tokens & `$user`; falls back to `public` if missing/invalid).
-* We quote **schema** and **relation** as **identifiers**, not as string literals.
+- Schema is resolved from `search_path` (supports quoted tokens & `$user`; falls back to `public` if missing/invalid).
+- We quote **schema** and **relation** as **identifiers**, not as string literals.
 
 ### Response shape (all services)
 
@@ -79,22 +80,22 @@ response.meta     # => { sql: '...', backtrace: [...] }
 MatViews::Services::CreateView.new(defn, force: false).run
 ```
 
-**Options**
+#### Options
 
 | Option  |    Type | Default | Meaning                                                                           |
 | ------- | ------: | ------: | --------------------------------------------------------------------------------- |
 | `force` | Boolean | `false` | Drop and recreate if the view already exists (service handles quoting/existence). |
 
-**Success response**
+#### Success response
 
-* `status: :created`
-* `payload: { view: "schema.rel" }`
-* `meta: { sql: "CREATE MATERIALIZED VIEW ...", force: false }`
+- `status: :created`
+- `payload: { view: "schema.rel" }`
+- `meta: { sql: "CREATE MATERIALIZED VIEW ...", force: false }`
 
-**Errors**
+#### Errors
 
-* Invalid `name` format.
-* SQL errors from your `definition.sql` (syntax, permission, etc.).
+- Invalid `name` format.
+- SQL errors from your `definition.sql` (syntax, permission, etc.).
 
 ---
 
@@ -107,7 +108,7 @@ Refresh picks the exact strategy at the **job** level based on `defn.refresh_str
 **Class:** `MatViews::Services::RegularRefresh`
 **SQL:** `REFRESH MATERIALIZED VIEW "schema"."rel"`
 
-**Row count strategies**
+#### Row count strategies
 
 | Strategy  | Symbol       | Description                              | Perf                 |
 | --------- | ------------ | ---------------------------------------- | -------------------- |
@@ -115,23 +116,23 @@ Refresh picks the exact strategy at the **job** level based on `defn.refresh_str
 | Exact     | `:exact`     | `SELECT COUNT(*) FROM "schema"."rel"`    | Accurate but heavier |
 | None      | `nil`        | Skip counting                            | Fastest              |
 
-**API**
+#### API
 
 ```ruby
 MatViews::Services::RegularRefresh.new(defn, row_count_strategy: :estimated).run
 ```
 
-**Success response**
+#### Success response
 
-* `status: :updated`
-* `payload: { view: "schema.rel", rows_count: <int or nil> }`
-* `meta: { sql: 'REFRESH MATERIALIZED VIEW ...', row_count_strategy: :estimated }`
+- `status: :updated`
+- `payload: { view: "schema.rel", rows_count: <int or nil> }`
+- `meta: { sql: 'REFRESH MATERIALIZED VIEW ...', row_count_strategy: :estimated }`
 
-**Errors**
+#### Errors
 
-* Invalid `name`.
-* View does not exist (pre-check).
-* DB errors are wrapped with `meta[:sql]` and backtrace.
+- Invalid `name`.
+- View does not exist (pre-check).
+- DB errors are wrapped with `meta[:sql]` and backtrace.
 
 ---
 
@@ -142,28 +143,28 @@ MatViews::Services::RegularRefresh.new(defn, row_count_strategy: :estimated).run
 
 **Requirement:** A **unique index** covering all rows on the MV.
 
-**API**
+#### API
 
 ```ruby
 MatViews::Services::ConcurrentRefresh.new(defn, row_count_strategy: :estimated).run
 ```
 
-**What the service checks**
+#### What the service checks
 
-* Valid `name`
-* MV exists
-* Presence of at least one **unique** index on the MV (e.g., `UNIQUE (user_id)`)
+- Valid `name`
+- MV exists
+- Presence of at least one **unique** index on the MV (e.g., `UNIQUE (user_id)`)
 
-**Success response**
+#### Success response
 
-* `status: :updated`
-* `payload` / `meta` similar to regular
+- `status: :updated`
+- `payload` / `meta` similar to regular
 
-**Errors**
+#### Errors
 
-* No unique index → helpful error explaining requirement.
-* `PG::ObjectInUse` / other concurrency conditions → returned as an error with advice to retry.
-* Same error wrapping as regular refresh.
+- No unique index → helpful error explaining requirement.
+- `PG::ObjectInUse` / other concurrency conditions → returned as an error with advice to retry.
+- Same error wrapping as regular refresh.
 
 > Tip: Refresh concurrency pairs well with **small, frequent** refreshes and a good autovacuum/ANALYZE cadence.
 
@@ -174,31 +175,30 @@ MatViews::Services::ConcurrentRefresh.new(defn, row_count_strategy: :estimated).
 **Class:** `MatViews::Services::SwapRefresh`
 **Idea:** Build into a temporary MV, then **atomically swap** names. Optionally recreate indexes/permissions.
 
-**Typical steps**
+#### Typical steps
 
 1. Create temp MV: `CREATE MATERIALIZED VIEW "schema"."rel__tmp_<nonce>" AS <definition.sql>`
 2. Recreate indexes/permissions on temp MV
 3. **Transactional swap**:
+   - `ALTER MATERIALIZED VIEW "schema"."rel" RENAME TO "rel__old_<nonce>"`
+   - `ALTER MATERIALIZED VIEW "schema"."temp" RENAME TO "rel"`
+   - Optional: drop old
 
-   * `ALTER MATERIALIZED VIEW "schema"."rel" RENAME TO "rel__old_<nonce>"`
-   * `ALTER MATERIALIZED VIEW "schema"."temp" RENAME TO "rel"`
-   * Optional: drop old
-
-**API**
+#### API
 
 ```ruby
 MatViews::Services::SwapRefresh.new(defn, row_count_strategy: :estimated).run
 ```
 
-**When to use**
+#### When to use
 
-* You can’t use `CONCURRENTLY` (no unique key) but need low read disruption.
-* You want to rebuild with complex SQL while keeping the old view intact until swap.
+- You can’t use `CONCURRENTLY` (no unique key) but need low read disruption.
+- You want to rebuild with complex SQL while keeping the old view intact until swap.
 
-**Errors**
+#### Errors
 
-* Any step failure returns a wrapped error (with `meta[:sql]` where relevant).
-* Ensure your service replays **index/permission recreation** deterministically.
+- Any step failure returns a wrapped error (with `meta[:sql]` where relevant).
+- Ensure your service replays **index/permission recreation** deterministically.
 
 ---
 
@@ -207,33 +207,33 @@ MatViews::Services::SwapRefresh.new(defn, row_count_strategy: :estimated).run
 **Class:** `MatViews::Services::DeleteView`
 **SQL:** `DROP MATERIALIZED VIEW [IF EXISTS] "schema"."rel" [CASCADE|RESTRICT]`
 
-**API**
+### API
 
 ```ruby
 MatViews::Services::DeleteView.new(defn, cascade: false, if_exists: true).run
 ```
 
-**Options**
+### Options
 
 | Option      |    Type | Default | Meaning                                                                              |
 | ----------- | ------: | ------: | ------------------------------------------------------------------------------------ |
 | `cascade`   | Boolean | `false` | Use `CASCADE`. Otherwise `RESTRICT` (error if dependents exist).                     |
 | `if_exists` | Boolean |  `true` | Use `IF EXISTS`. If `true` and missing → `:skipped`. If `false` and missing → error. |
 
-**Success responses**
+### Success responses
 
-* `status: :deleted` (when dropped)
-* `status: :skipped` (not present, `if_exists: true`)
+- `status: :deleted` (when dropped)
+- `status: :skipped` (not present, `if_exists: true`)
 
-**Errors**
+### Errors
 
-* Invalid `name`.
-* Not present with `if_exists: false`.
-* Dependents exist with `cascade: false` → helpful error suggesting `cascade: true`.
+- Invalid `name`.
+- Not present with `if_exists: false`.
+- Dependents exist with `cascade: false` → helpful error suggesting `cascade: true`.
 
-**Meta**
+### Meta
 
-* Includes `:sql`, `:cascade`, `:if_exists` (and backtrace on errors).
+- Includes `:sql`, `:cascade`, `:if_exists` (and backtrace on errors).
 
 ---
 
@@ -241,10 +241,10 @@ MatViews::Services::DeleteView.new(defn, cascade: false, if_exists: true).run
 
 Jobs wrap services, **measure duration**, and record runs:
 
-* **Create:** `MatViews::CreateViewJob` → `mat_view_create_runs`
-* **Refresh:** `MatViews::RefreshViewJob` → `mat_view_refresh_runs`
+- **Create:** `MatViews::CreateViewJob` → `mat_view_create_runs`
+- **Refresh:** `MatViews::RefreshViewJob` → `mat_view_refresh_runs`
   (selects `RegularRefresh` / `ConcurrentRefresh` / `SwapRefresh` based on `defn.refresh_strategy`)
-* **Delete:** `MatViews::DeleteViewJob` → `mat_view_delete_runs`
+- **Delete:** `MatViews::DeleteViewJob` → `mat_view_delete_runs`
 
 **Enqueue via adapter** (the adapter uses the backend you configured—**no guessing**):
 
@@ -309,28 +309,28 @@ MatViews::DeleteViewJob.perform_later(defn.id, cascade: false) # if_missing => :
 
 ## Troubleshooting
 
-* **`Invalid view name format`**
+- **`Invalid view name format`**
   Ensure `definition.name` has **no dots** and matches `/^[A-Za-z_][A-Za-z0-9_]*$/`.
 
-* **`cannot refresh materialized view concurrently without a unique index`**
+- **`cannot refresh materialized view concurrently without a unique index`**
   Add a **unique index** that covers **all rows**. Example: `UNIQUE (user_id)`.
 
-* **`PG::ObjectInUse`** during concurrent refresh
+- **`PG::ObjectInUse`** during concurrent refresh
   Another session is locking the relation. Retry; ensure long-running transactions aren’t pinning catalog rows.
 
-* **`dependencies exist. Use cascade: true`** when deleting
+- **`dependencies exist. Use cascade: true`** when deleting
   A view or other object depends on the MV. Either drop dependents first or pass `cascade: true`.
 
-* **Row counts differ after refresh**
+- **Row counts differ after refresh**
   Use `row_count_strategy: :exact` to verify. Consider ANALYZE/autovacuum cadence affecting `reltuples` (estimated). Audit the underlying SQL for non-determinism.
 
 ---
 
 ## See also
 
-* [Definitions)](./definitions)
-* [Run Tracking (Create / Refresh / Delete)](./runs)
-* [Jobs & Adapter](./jobs-and-adapters)
-* [Rake Tasks](./rake-tasks)
-* [Validation & Benchmarks](/validation)
-* Project policies: [SECURITY](https://github.com/Code-Vedas/rails_materialized_views/blob/main/SECURITY.md) · [CONTRIBUTING](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CONTRIBUTING.md) · [CODE\_OF\_CONDUCT](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CODE_OF_CONDUCT.md)
+- [Definitions)](./definitions)
+- [Run Tracking (Create / Refresh / Delete)](./runs)
+- [Jobs & Adapter](./jobs-and-adapters)
+- [Rake Tasks](./rake-tasks)
+- [Validation & Benchmarks](/validation)
+- Project policies: [SECURITY](https://github.com/Code-Vedas/rails_materialized_views/blob/main/SECURITY.md) · [CONTRIBUTING](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CONTRIBUTING.md) · [CODE_OF_CONDUCT](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CODE_OF_CONDUCT.md)
