--- a/docs/pages/5.4 jobs-and-adapters.md
+++ b/docs/pages/5.4 jobs-and-adapters.md
@@ -7,13 +7,15 @@ permalink: /engine/jobs-and-adapters
 
 # Jobs & Adapter
 
-Jobs are the **asynchronous** wrappers around the services. They normalize inputs, time the operation, persist a **run record**, and return a concise hash for programmatic use. The **Adapter** is a single, stable API used everywhere in this project (rake tasks, demo app, examples) to enqueue jobs — regardless of whether your app uses **ActiveJob**, **Sidekiq**, or **Resque**.
+Jobs are the **asynchronous** wrappers around the services.
+They normalize inputs, time the operation, persist a **run record**, and return a concise hash for programmatic use.
+The **Adapter** is a single, stable API used everywhere in this project (rake tasks, demo app, examples) to enqueue jobs — regardless of whether your app uses **ActiveJob**, **Sidekiq**, or **Resque**.
 
 ---
 
 ## TL;DR
 
-* Enqueue with **one** call:
+- Enqueue with **one** call:
 
   ```ruby
   MatViews::Jobs::Adapter.enqueue(
@@ -22,12 +24,12 @@ Jobs are the **asynchronous** wrappers around the services. They normalize input
     args:  [definition.id, :estimated] # or :exact
   )
   ```
-* The adapter **does not guess** a backend; it assumes your project’s job system is already configured.
-* Jobs create/update **run tables**:
 
-  * Create → `mat_view_create_runs`
-  * Refresh → `mat_view_refresh_runs`
-  * Delete → `mat_view_delete_runs`
+- The adapter **does not guess** a backend; it assumes your project’s job system is already configured.
+- Jobs create/update **run tables**:
+  - Create → `mat_view_create_runs`
+  - Refresh → `mat_view_refresh_runs`
+  - Delete → `mat_view_delete_runs`
 
 ---
 
@@ -44,15 +46,17 @@ end
 
 Make sure your app’s background job system is configured:
 
-* **ActiveJob** (default Rails):
+- **ActiveJob** (default Rails):
 
   ```ruby
   # e.g., config/environments/production.rb
   config.active_job.queue_adapter = :sidekiq # or :resque, :delayed_job, etc.
   ```
-* **Sidekiq** / **Resque**: configure per their docs. The adapter will respect your setup.
+
+- **Sidekiq** / **Resque**: configure per their docs. The adapter will respect your setup.
 
 {: .note}
+
 > The adapter’s contract is stable: `Adapter.enqueue(job_class, queue:, args:)`. It forwards to the configured backend without trying to detect or override it.
 
 ---
@@ -75,11 +79,10 @@ perform(definition_id, force_arg = nil)
 
 **Normalization:**
 
-* `force_arg` can be:
-
-  * `true/false`
-  * or `{ force: true/false }`
-  * defaults to `false`
+- `force_arg` can be:
+  - `true/false`
+  - or `{ force: true/false }`
+  - defaults to `false`
 
 **Enqueue examples:**
 
@@ -105,9 +108,9 @@ MatViews::CreateViewJob.perform_later(defn.id, force: true)
 
 **Service mapping:**
 
-* `regular` → `MatViews::Services::RegularRefresh`
-* `concurrent` → `MatViews::Services::ConcurrentRefresh` (needs a **unique index**)
-* `swap` → `MatViews::Services::SwapRefresh`
+- `regular` → `MatViews::Services::RegularRefresh`
+- `concurrent` → `MatViews::Services::ConcurrentRefresh` (needs a **unique index**)
+- `swap` → `MatViews::Services::SwapRefresh`
 
 **Signature:**
 
@@ -117,10 +120,9 @@ perform(definition_id, strategy_arg = nil)
 
 **Normalization (row count):**
 
-* Accepts symbol/string or a hash:
-
-  * `:estimated` (default), `:exact`, or `nil` (skip).
-  * `{ row_count_strategy: :exact }` also works.
+- Accepts symbol/string or a hash:
+  - `:estimated` (default), `:exact`, or `nil` (skip).
+  - `{ row_count_strategy: :exact }` also works.
 
 **Enqueue examples:**
 
@@ -151,11 +153,10 @@ perform(definition_id, cascade_arg = nil)
 
 **Normalization (cascade boolean):**
 
-* Accepts:
-
-  * `true/false`
-  * or `{ cascade: true/false }`
-  * defaults to `false`
+- Accepts:
+  - `true/false`
+  - or `{ cascade: true/false }`
+  - defaults to `false`
 
 **Enqueue examples:**
 
@@ -176,13 +177,14 @@ MatViews::DeleteViewJob.perform_later(defn.id, cascade: false)
 
 Jobs record to run tables with consistent fields:
 
-* `status`: `running | success | failed`
-* `started_at`, `finished_at`, `duration_ms`
-* `error` (string, when failed)
-* `meta` (JSON: includes service payload/options, e.g., `view`, `row_count_strategy`, `cascade`, SQL, etc.)
-* For refresh runs: `rows_count` when a row count strategy is used.
+- `status`: `running | success | failed`
+- `started_at`, `finished_at`, `duration_ms`
+- `error` (string, when failed)
+- `meta` (JSON: includes service payload/options, e.g., `view`, `row_count_strategy`, `cascade`, SQL, etc.)
+- For refresh runs: `rows_count` when a row count strategy is used.
 
 {: .note}
+
 > Timing uses a monotonic clock inside the job for accurate `duration_ms`.
 
 ---
@@ -212,15 +214,13 @@ sequenceDiagram
 
 ## When to use Adapter vs `perform_later`
 
-* Use **Adapter** when:
+- Use **Adapter** when:
+  - You want a **single** enqueue API in CLI/tools that works across backends.
+  - You want to pass a **queue name** explicitly (from `MatViews.configuration.job_queue`).
 
-  * You want a **single** enqueue API in CLI/tools that works across backends.
-  * You want to pass a **queue name** explicitly (from `MatViews.configuration.job_queue`).
-
-* Use **`perform_later`** when:
-
-  * You’re already inside Rails app code using ActiveJob everywhere.
-  * You don’t need the Adapter’s uniform API (still fine!).
+- Use **`perform_later`** when:
+  - You’re already inside Rails app code using ActiveJob everywhere.
+  - You don’t need the Adapter’s uniform API (still fine!).
 
 Both paths result in identical job behavior and run tracking.
 
@@ -228,12 +228,12 @@ Both paths result in identical job behavior and run tracking.
 
 ## Logging & errors
 
-* Jobs don’t print to STDOUT; use `Rails.logger` for observability.
-* Failures:
+- Jobs don’t print to STDOUT; use `Rails.logger` for observability.
+- Failures:
+  - The **service** returns an error response or raises.
+  - The **job** marks the run `failed` and includes the error string and any available backtrace/SQL in `meta`.
 
-  * The **service** returns an error response or raises.
-  * The **job** marks the run `failed` and includes the error string and any available backtrace/SQL in `meta`.
-* Rake tasks (CLI) handle **confirmation**; jobs just do the work.
+- Rake tasks (CLI) handle **confirmation**; jobs just do the work.
 
 ---
 
@@ -272,26 +272,25 @@ MatViews::DeleteViewJob.perform_later(defn.id, cascade: false)
 
 ## Troubleshooting
 
-* **Nothing seems to happen after enqueue**
+- **Nothing seems to happen after enqueue**
   Ensure your queue backend is running (e.g., Sidekiq server). In development, consider `config.active_job.queue_adapter = :inline` to run synchronously.
 
-* **Concurrent refresh error about unique index**
+- **Concurrent refresh error about unique index**
   Your MV lacks a unique index covering all rows. Create one, then retry.
 
-* **Run rows not appearing**
+- **Run rows not appearing**
   Double-check you’re enqueuing **jobs** (not calling services directly). Services don’t write run rows.
 
-* **Wrong queue**
+- **Wrong queue**
   Verify `MatViews.configuration.job_queue` and any per-environment overrides.
 
 ---
 
 ## See also
 
-* [Definitions)](./definitions)
-* [Run Tracking (Create / Refresh / Delete)](./runs)
-* [Creation, Refresh & Delete Services](./services)
-* [Rake Tasks](./rake-tasks)
-* [Validation & Benchmarks](/validation)
-* Project policies: [SECURITY](https://github.com/Code-Vedas/rails_materialized_views/blob/main/SECURITY.md) · [CONTRIBUTING](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CONTRIBUTING.md) · [CODE\_OF\_CONDUCT](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CODE_OF_CONDUCT.md)
-
+- [Definitions)](./definitions)
+- [Run Tracking (Create / Refresh / Delete)](./runs)
+- [Creation, Refresh & Delete Services](./services)
+- [Rake Tasks](./rake-tasks)
+- [Validation & Benchmarks](/validation)
+- Project policies: [SECURITY](https://github.com/Code-Vedas/rails_materialized_views/blob/main/SECURITY.md) · [CONTRIBUTING](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CONTRIBUTING.md) · [CODE_OF_CONDUCT](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CODE_OF_CONDUCT.md)
