--- a/docs/pages/5.5 rake-tasks.md
+++ b/docs/pages/5.5 rake-tasks.md
@@ -10,6 +10,7 @@ permalink: /engine/rake-tasks
 The engine ships a set of **Rake tasks** for creating, refreshing, and deleting PostgreSQL materialized views. Tasks log via `Rails.logger`, ask for confirmation (unless skipped), and enqueue background jobs through the **Adapter**.
 
 {: .note}
+
 > Adapter call (used under the hood):
 >
 > ```ruby
@@ -24,32 +25,32 @@ The engine ships a set of **Rake tasks** for creating, refreshing, and deleting 
 
 ### Create
 
-* `mat_views:create_by_name[view_name, force, --yes]`
-* `mat_views:create_by_id[definition_id, force, --yes]`
-* `mat_views:create_all[force, --yes]`
+- `mat_views:create_by_name[view_name, force, --yes]`
+- `mat_views:create_by_id[definition_id, force, --yes]`
+- `mat_views:create_all[force, --yes]`
 
 ### Refresh
 
-* `mat_views:refresh_by_name[view_name, row_count_strategy, --yes]`
-* `mat_views:refresh_by_id[definition_id, row_count_strategy, --yes]`
-* `mat_views:refresh_all[row_count_strategy, --yes]`
+- `mat_views:refresh_by_name[view_name, row_count_strategy, --yes]`
+- `mat_views:refresh_by_id[definition_id, row_count_strategy, --yes]`
+- `mat_views:refresh_all[row_count_strategy, --yes]`
 
 `row_count_strategy` can be:
 
-* `estimated` (default; fast, uses `reltuples`)
-* `exact` (uses `COUNT(*)`)
-* blank to skip counting (if you pass nothing)
+- `estimated` (default; fast, uses `reltuples`)
+- `exact` (uses `COUNT(*)`)
+- blank to skip counting (if you pass nothing)
 
 ### Delete
 
-* `mat_views:delete_by_name[view_name, cascade, --yes]`
-* `mat_views:delete_by_id[definition_id, cascade, --yes]`
-* `mat_views:delete_all[cascade, --yes]`
+- `mat_views:delete_by_name[view_name, cascade, --yes]`
+- `mat_views:delete_by_id[definition_id, cascade, --yes]`
+- `mat_views:delete_all[cascade, --yes]`
 
 `cascade` is boolean-ish:
 
-* `false` (default) → `RESTRICT` (fails if dependents exist)
-* `true`  → `CASCADE`
+- `false` (default) → `RESTRICT` (fails if dependents exist)
+- `true` → `CASCADE`
 
 ---
 
@@ -61,10 +62,11 @@ Tasks accept **positional args** and optional **env** overrides:
 | ------------------ | -------------------- | -------------------------------------------- | ------------------------------- |
 | Skip confirmation  | `--yes` (3rd arg)    | `YES=1`                                      | `--yes`, `yes`, `y`, `1`        |
 | Force create       | `force`              | `FORCE=true`                                 | `true/false/1/0/yes/no`         |
-| Row count strategy | `row_count_strategy` | `ROW_COUNT_STRATEGY=...`                     | `estimated`, `exact`, *(blank)* |
-| Cascade delete     | `cascade`            | `CASCADE=true` *(if implemented in helpers)* | `true/false/1/0/yes/no`         |
+| Row count strategy | `row_count_strategy` | `ROW_COUNT_STRATEGY=...`                     | `estimated`, `exact`, _(blank)_ |
+| Cascade delete     | `cascade`            | `CASCADE=true` _(if implemented in helpers)_ | `true/false/1/0/yes/no`         |
 
 {: .note}
+
 > Boolean-ish parsing accepts: `1`, `true`, `yes`, `y`, `--yes` (case-insensitive).
 > If you pass both arg and env, **arg wins**.
 
@@ -72,30 +74,32 @@ Tasks accept **positional args** and optional **env** overrides:
 
 ## Confirmation behavior
 
-* Tasks log a context line and prompt: `Proceed? [y/N]:`
-* Input `y` / `Y` / `yes` → proceed
-* Empty line or EOF (`Ctrl+D`) → **abort** with `Aborted.`
-* To skip the prompt entirely, pass `--yes` arg or `YES=1`.
+- Tasks log a context line and prompt: `Proceed? [y/N]:`
+- Input `y` / `Y` / `yes` → proceed
+- Empty line or EOF (`Ctrl+D`) → **abort** with `Aborted.`
+- To skip the prompt entirely, pass `--yes` arg or `YES=1`.
 
 {: .note}
+
 > All log output uses `Rails.logger`. In development, ensure your logger is visible (e.g., to STDOUT).
 
 ---
 
 ## Name resolution & safety
 
-* `view_name` may be either:
+- `view_name` may be either:
+  - the **definition name** (unqualified, e.g., `mv_user_activity`), or
+  - a **schema-qualified materialized view** (e.g., `public.mv_user_activity`).
 
-  * the **definition name** (unqualified, e.g., `mv_user_activity`), or
-  * a **schema-qualified materialized view** (e.g., `public.mv_user_activity`).
-* If you pass a schema-qualified name that **physically exists** but there’s **no definition** with that name, the task raises a helpful error (prevents operating on orphaned MVs silently).
-* Definition names must be **simple identifiers** (no dots). Schema is resolved from the DB `search_path` at runtime by services.
+- If you pass a schema-qualified name that **physically exists** but there’s **no definition** with that name, the task raises a helpful error (prevents operating on orphaned MVs silently).
+- Definition names must be **simple identifiers** (no dots). Schema is resolved from the DB `search_path` at runtime by services.
 
 ---
 
 ## Examples
 
 {: .note}
+
 > Shell tip: for Zsh/Bash, quote the task invocation when passing commas.
 
 ### Create
@@ -159,9 +163,9 @@ YES=1 bin/rake 'mat_views:refresh_by_name[public.mv_user_activity]'
 
 Each task enqueues **one job per definition**:
 
-* Create → `MatViews::CreateViewJob` with args `[definition_id, force]`
-* Refresh → `MatViews::RefreshViewJob` with args `[definition_id, row_count_strategy]`
-* Delete → `MatViews::DeleteViewJob` with args `[definition_id, cascade]`
+- Create → `MatViews::CreateViewJob` with args `[definition_id, force]`
+- Refresh → `MatViews::RefreshViewJob` with args `[definition_id, row_count_strategy]`
+- Delete → `MatViews::DeleteViewJob` with args `[definition_id, cascade]`
 
 Queue is taken from `MatViews.configuration.job_queue` (default `:default` unless you changed it).
 
@@ -169,14 +173,15 @@ Queue is taken from `MatViews.configuration.job_queue` (default `:default` unles
 
 ## Output & logging
 
-* Tasks use `Rails.logger.info` (no `puts`), e.g.:
+- Tasks use `Rails.logger.info` (no `puts`), e.g.:
 
-  ```
+  ```bash
   [mat_views] Enqueued RefreshViewJob for definition #42 (mv_user_activity), row_count_strategy=estimated
   ```
-* If no definitions are found (e.g., `*_all`), they log:
 
-  ```
+- If no definitions are found (e.g., `*_all`), they log:
+
+  ```bash
   [mat_views] No mat view definitions found.
   ```
 
@@ -184,11 +189,11 @@ Queue is taken from `MatViews.configuration.job_queue` (default `:default` unles
 
 ## Error cases you may see
 
-* **`view_name is required`** — missing/blank name.
-* **`No MatViews::MatViewDefinition found for "foo"`** — unknown definition.
-* **`Materialized view public.foo exists, but no MatViews::MatViewDefinition record was found for name="foo"`** — schema-qualified MV exists but no definition; intentional guardrail.
-* **`definition_id is required`** — missing/blank id.
-* **Abort on confirm** — pressing Enter or EOF at the prompt without `--yes` / `YES=1`.
+- **`view_name is required`** — missing/blank name.
+- **`No MatViews::MatViewDefinition found for "foo"`** — unknown definition.
+- **`Materialized view public.foo exists, but no MatViews::MatViewDefinition record was found for name="foo"`** — schema-qualified MV exists but no definition; intentional guardrail.
+- **`definition_id is required`** — missing/blank id.
+- **Abort on confirm** — pressing Enter or EOF at the prompt without `--yes` / `YES=1`.
 
 ---
 
@@ -196,27 +201,27 @@ Queue is taken from `MatViews.configuration.job_queue` (default `:default` unles
 
 The tasks are implemented in `lib/tasks/mat_views_tasks.rake` and rely on `MatViews::Tasks::Helpers`:
 
-* `confirm!(message, skip:)` — logs and prompts (or skips with `--yes` / `YES=1`)
-* `find_definition_by_name!` — resolves names (definition vs schema-qualified MV)
-* `parse_force?`, `parse_row_count_strategy`, `parse_cascade?` — boolean/enum parsing
-* `enqueue_create!`, `enqueue_refresh!`, `enqueue_delete!` — adapter calls
+- `confirm!(message, skip:)` — logs and prompts (or skips with `--yes` / `YES=1`)
+- `find_definition_by_name!` — resolves names (definition vs schema-qualified MV)
+- `parse_force?`, `parse_row_count_strategy`, `parse_cascade?` — boolean/enum parsing
+- `enqueue_create!`, `enqueue_refresh!`, `enqueue_delete!` — adapter calls
 
 ---
 
 ## Troubleshooting
 
-* **No logs appear**: ensure your Rails logger outputs to STDOUT/stderr in your environment.
-* **Command parsing in shell**: quote the whole task invocation when passing commas or blank args.
-* **Background jobs don’t run**: verify your queue backend is configured and running; in development, consider `config.active_job.queue_adapter = :inline` for immediate execution (jobs still record run rows).
-* **Concurrent refresh fails**: ensure your MV has a **unique index** that covers all rows.
+- **No logs appear**: ensure your Rails logger outputs to STDOUT/stderr in your environment.
+- **Command parsing in shell**: quote the whole task invocation when passing commas or blank args.
+- **Background jobs don’t run**: verify your queue backend is configured and running; in development, consider `config.active_job.queue_adapter = :inline` for immediate execution (jobs still record run rows).
+- **Concurrent refresh fails**: ensure your MV has a **unique index** that covers all rows.
 
 ---
 
 ## See also
 
-* [Definitions)](./definitions)
-* [Run Tracking (Create / Refresh / Delete)](./runs)
-* [Creation, Refresh & Delete Services](./services)
-* [Jobs & Adapter](./jobs-and-adapters)
-* [Validation & Benchmarks](/validation)
-* Project policies: [SECURITY](https://github.com/Code-Vedas/rails_materialized_views/blob/main/SECURITY.md) · [CONTRIBUTING](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CONTRIBUTING.md) · [CODE\_OF\_CONDUCT](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CODE_OF_CONDUCT.md)
+- [Definitions)](./definitions)
+- [Run Tracking (Create / Refresh / Delete)](./runs)
+- [Creation, Refresh & Delete Services](./services)
+- [Jobs & Adapter](./jobs-and-adapters)
+- [Validation & Benchmarks](/validation)
+- Project policies: [SECURITY](https://github.com/Code-Vedas/rails_materialized_views/blob/main/SECURITY.md) · [CONTRIBUTING](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CONTRIBUTING.md) · [CODE_OF_CONDUCT](https://github.com/Code-Vedas/rails_materialized_views/blob/main/CODE_OF_CONDUCT.md)
